--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,3 +1,35 @@
 input {
   margin-bottom: 5px;
 }
+
+.navbar-default_blue {
+  background-color: #2365a9;
+  border-color: #2365a9;
+}
+.navbar-default_blue .navbar-text a {
+  color: white;
+}
+
+.navbar-default_blue .navbar-header a {
+  color: white;
+}
+
+.navbar-default .navbar-text_black a {
+  color: black;
+}
+
+body {
+  padding-top: 70px;
+}
+.jj-widget .jj-toolbar {
+  position: absolute;
+  right: 0px;
+  background-color: grey;
+  padding:7px;
+  border-bottom-left-radius: 10px;
+  opacity: 0.5;
+}
+
+.jj-widget .jj-content {
+  width:100%;
+}
