--- a/src/assets/views/user/profile.html
+++ b/src/assets/views/user/profile.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-default_blue navbar-fixed-top">
   <div class="container-fluid">
     <p class="navbar-header pull-left">
       <a class="navbar-brand thick">
@@ -28,7 +28,8 @@
   </div>
 </nav>
 
-<div class="container">
+
+<div class="container-fluid">
   <form>
     <div class="form-group">
       <label for="username">
@@ -37,27 +38,27 @@
       <input name="username"
              id="username"
              type="text"
-             placeholder="password"
+             placeholder="Username"
              class="form-control"/>
     </div>
   </form>
 
   <form>
     <div class="form-group">
-      <label class="form-group form-block" for="email">
+      <label for="email">
         Email
       </label>
       <input name="email"
              id="email"
              type="email"
-             placeholder="email"
+             placeholder="Email"
              class="form-control"/>
     </div>
   </form>
 
   <form>
     <div class="form-group">
-      <label class="form-control-label" for="First Name">
+      <label for="First Name">
         First Name
       </label>
       <input name="First Name"
@@ -70,7 +71,7 @@
 
   <form>
     <div class="form-group">
-      <label class="form-control-label" for="Last Name">
+      <label for="Last Name">
         Last Name
       </label>
       <input name="Last Name"
@@ -90,7 +91,7 @@
 
 </div>
 
-<nav class="navbar navbar-default navbar-fixed-bottom">
+<nav class="navbar navbar-default_blue navbar-fixed-bottom">
   <div class="container-fluid">
     <p class="navbar-text pull-right">
       <a href="profile.html">
