--- a/src/assets/views/website/website-new.html
+++ b/src/assets/views/website/website-new.html
@@ -1,10 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="initial-scale=1, user-scalable=no">
+  <title>New Website</title>
+  <link rel="stylesheet" href="../../vendors/bootstrap/dist/css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="../../css/style.css"/>
+  <script src="../../vendors/bootstrap/dist/js/bootstrap.min.js"></script>
 </head>
 <body>
+
+<nav class="navbar navbar-default_blue navbar-fixed-top">
+  <div class="container-fluid">
+    <p class="navbar-header pull-left">
+      <a class="navbar-brand thick">
+        <b>
+          New Website
+        </b>
+      </a>
+    </p>
+
+    <p class="navbar-text pull-right">
+      <a href="profile.html" class="navbar-link">
+        <span class="glyphicon glyphicon-ok"></span>
+      </a>
+    </p>
+  </div>
+</nav>
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-xs-12 col-lg-9">
+      <form>
+        <div class="form-group">
+          <label for="Name">
+            Name
+          </label>
+          <input name="Name"
+                 id="Name"
+                 type="text"
+                 placeholder="Name"
+                 class="form-control"/>
+        </div>
+      </form>
+
+      <div class="form-group">
+        <label for="Description">
+          Description
+        </label>
+        <textarea
+          placeholder="Description"
+          rows="3"
+          name="Description"
+          id="Description"
+          class="form-control"></textarea>
+      </div>
+    </div>
+  </div>
+</div>
+
+<nav class="navbar navbar-default_blue navbar-fixed-bottom">
+  <div class="container-fluid">
+    <p class="navbar-text pull-right">
+      <a href="profile.html">
+        <span class="glyphicon glyphicon-user"></span>
+      </a>
+    </p>
+  </div>
+</nav>
 
 </body>
 </html>
