Updated Website pages

--- a/src/assets/views/website/website-list.html
+++ b/src/assets/views/website/website-list.html
@@ -12,19 +12,19 @@
 
 <nav class="navbar navbar-default_blue navbar-fixed-top">
   <div class="container-fluid">
-    <div class="navbar-text pull-left">
+    <div class="navbar-brand pull-left">
       <a href="../../views/user/profile.html" class="navbar-link">
         <span class="glyphicon glyphicon-chevron-left"></span>
       </a>
     </div>
     <div class="navbar-header pull-left">
-      <a class="navbar-brand thick">
+      <a class="navbar-brand">
         <b>
           Websites
         </b>
       </a>
     </div>
-    <p class="navbar-text pull-right">
+    <p class="navbar-brand pull-right">
       <a class="navbar-link" href="website-new.html">
         <span class="glyphicon glyphicon-plus"></span>
       </a>
@@ -87,7 +87,7 @@
 
 <nav class="navbar navbar-default_blue navbar-fixed-bottom">
   <div class="container-fluid">
-    <p class="navbar-text pull-right">
+    <p class="navbar-brand pull-right">
       <a href="../../views/user/profile.html">
         <span class="glyphicon glyphicon-user"></span>
       </a>
