--- a/src/assets/views/widget/widget-list.html
+++ b/src/assets/views/widget/widget-list.html
@@ -12,7 +12,7 @@
 
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
-    <div class="navbar-text pull-left">
+    <div class="navbar-brand pull-left">
       <a href="../../views/user/profile.html" class="navbar-link">
         <span class="glyphicon glyphicon-chevron-left"></span>
       </a>
