--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -9,6 +9,9 @@ input {
 .navbar-default_blue .navbar-text a {
   color: white;
 }
+.navbar-default_blue .navbar-brand a {
+  color: white;
+}
 
 .navbar-default_blue .navbar-header a {
   color: white;
