--- a/src/assets/views/website/website-edit.html
+++ b/src/assets/views/website/website-edit.html
@@ -3,12 +3,158 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="initial-scale=1, user-scalable=no">
-  <title>Website Edit</title>
+  <title>Edit Website</title>
   <link rel="stylesheet" href="../../vendors/bootstrap/dist/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="../../css/style.css"/>
   <script src="../../vendors/bootstrap/dist/js/bootstrap.min.js"></script>
 </head>
 <body>
-<h1>Website Edit</h1>
+
+<nav class="navbar navbar-default_blue navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="col-sm-3 hidden-xs">
+      <div class="navbar-brand pull-left">
+        <a href="../../views/user/profile.html" class="navbar-link">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
+      </div>
+      <div class="navbar-header pull-left">
+        <a class="navbar-brand">
+          <b>
+            Websites
+          </b>
+        </a>
+      </div>
+      <p class="navbar-brand pull-right">
+        <a class="navbar-link" href="website-new.html">
+          <span class="glyphicon glyphicon-plus"></span>
+        </a>
+      </p>
+    </div>
+    <div class="col-sm-9">
+      <div class="navbar-header pull-left">
+        <a class="navbar-brand thick">
+          <b>
+            Edit Website
+          </b>
+        </a>
+      </div>
+
+      <p class="navbar-brand pull-right">
+        <a href="profile.html" class="navbar-link">
+          <span class="glyphicon glyphicon-ok"></span>
+        </a>
+      </p>
+    </div>
+  </div>
+</nav>
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-sm-3 hidden-xs">
+      <div class="container-fluid">
+        <ul class="list-group">
+          <li class="list-group-item">
+            <div class="row">
+              <div class="col-xs-9">
+                Address Book App
+              </div>
+              <div class="col-xs-3">
+                <a class="pull-right" href="website-edit.html">
+                  <span class="glyphicon glyphicon-cog"></span>
+                </a>
+              </div>
+            </div>
+          </li>
+          <li class="list-group-item">
+            <div class="row">
+              <div class="col-xs-9">
+                Blogger
+              </div>
+              <div class="col-xs-3">
+                <a class="pull-right" href="website-edit.html">
+                  <span class="glyphicon glyphicon-cog"></span>
+                </a>
+              </div>
+            </div>
+          </li>
+          <li class="list-group-item">
+            <div class="row">
+              <div class="col-xs-9">
+                Blogging App
+              </div>
+              <div class="col-xs-3">
+                <a class="pull-right" href="website-edit.html">
+                  <span class="glyphicon glyphicon-cog"></span>
+                </a>
+              </div>
+            </div>
+          </li>
+          <li class="list-group-item">
+            <div class="row">
+              <div class="col-xs-9">
+                Script Testing App
+              </div>
+              <div class="col-xs-3">
+                <a class="pull-right" href="website-edit.html">
+                  <span class="glyphicon glyphicon-cog"></span>
+                </a>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="col-sm-9">
+
+      <form>
+        <div class="form-group">
+          <label for="Name">
+            Website Name
+          </label>
+          <input name="Name"
+                 id="Name"
+                 type="text"
+                 placeholder="Website Name"
+                 class="form-control"/>
+        </div>
+      </form>
+
+      <div class="form-group">
+        <label for="Description">
+          Website Description
+        </label>
+        <textarea
+          placeholder="Description"
+          rows="5"
+          name="Description"
+          id="Description"
+          class="form-control">"Lorem ipsum dolor sit amet,
+          consectetur adipiscing elit, sed do eiusmod tempor
+          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+          commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+          velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+          cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+          est laborum."</textarea>
+      </div>
+
+      <a class="btn btn-danger btn-block" role="button" aria-pressed="true" href="website-list.html">
+        Delete
+      </a>
+    </div>
+  </div>
+</div>
+
+<nav class="navbar navbar-default_blue navbar-fixed-bottom">
+  <div class="container-fluid">
+    <p class="navbar-brand pull-right">
+      <a href="profile.html">
+        <span class="glyphicon glyphicon-user"></span>
+      </a>
+    </p>
+  </div>
+</nav>
+
 </body>
 </html>
