Updated Page pages and Widget Pages

--- a/src/assets/views/widget/widget-list.html
+++ b/src/assets/views/widget/widget-list.html
@@ -45,7 +45,7 @@
       <span class="glyphicon glyphicon-cog"></span>
       <span class="glyphicon glyphicon-menu-hamburger"></span>
     </div>
-    <h2> Stuff </h2>
+    <h2> Animals </h2>
   </div>
   <div class="jj-widget">
     <div class="jj-toolbar">
