--- a/src/assets/views/page/page-list.html
+++ b/src/assets/views/page/page-list.html
@@ -1,10 +1,111 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="initial-scale=1, user-scalable=no">
+  <title>Pages</title>
+  <link rel="stylesheet" href="../../vendors/bootstrap/dist/css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="../../css/style.css"/>
+  <script src="../../vendors/bootstrap/dist/js/bootstrap.min.js"></script>
 </head>
 <body>
+
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-brand pull-left">
+      <a href="../../views/website/website-list.html" class="navbar-link">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+      </a>
+    </div>
+    <div class="navbar-header pull-left">
+      <a class="navbar-brand">
+        <b>
+          Pages
+        </b>
+      </a>
+    </div>
+    <p class="navbar-brand pull-right">
+      <a class="navbar-link" href="page-new.html">
+        <span class="glyphicon glyphicon-plus"></span>
+      </a>
+    </p>
+  </div>
+</nav>
+
+<div class="container-fluid">
+  <ul class="list-group">
+    <li class="list-group-item">
+      <div class="row">
+        <div class="col-xs-9">
+          Blog Post
+        </div>
+        <div class="col-xs-3">
+          <a class="pull-right" href="page-edit.html">
+            <span class="glyphicon glyphicon-cog"></span>
+          </a>
+        </div>
+      </div>
+    </li>
+    <li class="list-group-item">
+      <div class="row">
+        <div class="col-xs-9">
+          Blogs
+        </div>
+        <div class="col-xs-3">
+          <a class="pull-right" href="page-edit.html">
+            <span class="glyphicon glyphicon-cog"></span>
+          </a>
+        </div>
+      </div>
+    </li>
+    <li class="list-group-item">
+      <div class="row">
+        <div class="col-xs-9">
+          Home
+        </div>
+        <div class="col-xs-3">
+          <a class="pull-right" href="page-edit.html">
+            <span class="glyphicon glyphicon-cog"></span>
+          </a>
+        </div>
+      </div>
+    </li>
+    <li class="list-group-item">
+      <div class="row">
+        <div class="col-xs-9">
+          About
+        </div>
+        <div class="col-xs-3">
+          <a class="pull-right" href="page-edit.html">
+            <span class="glyphicon glyphicon-cog"></span>
+          </a>
+        </div>
+      </div>
+    </li>
+    <li class="list-group-item">
+      <div class="row">
+        <div class="col-xs-9">
+          Contact Us
+        </div>
+        <div class="col-xs-3">
+          <a class="pull-right" href="page-edit.html">
+            <span class="glyphicon glyphicon-cog"></span>
+          </a>
+        </div>
+      </div>
+    </li>
+  </ul>
+</div>
+
+<nav class="navbar navbar-default navbar-fixed-bottom">
+  <div class="container-fluid">
+    <p class="navbar-brand pull-right">
+      <a href="../../views/user/profile.html">
+        <span class="glyphicon glyphicon-user"></span>
+      </a>
+    </p>
+  </div>
+</nav>
 
 </body>
 </html>
