--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -15,5 +15,8 @@
     <a href="test">Test MongoDB</a>
   </h4>
 
+  <h4>
+    <a href="../../../assets/index.html">Assignment 2</a>
+  </h4>
 </div>
 
