--- a/src/assets/views/page/page-list.html
+++ b/src/assets/views/page/page-list.html
@@ -37,7 +37,9 @@
     <li class="list-group-item">
       <div class="row">
         <div class="col-xs-9">
+          <a href="../widget/widget-list.html">
           Blog Post
+          </a>
         </div>
         <div class="col-xs-3">
           <a class="pull-right" href="page-edit.html">
@@ -49,7 +51,9 @@
     <li class="list-group-item">
       <div class="row">
         <div class="col-xs-9">
+          <a href="../widget/widget-list.html">
           Blogs
+          </a>
         </div>
         <div class="col-xs-3">
           <a class="pull-right" href="page-edit.html">
@@ -61,7 +65,9 @@
     <li class="list-group-item">
       <div class="row">
         <div class="col-xs-9">
+          <a href="../widget/widget-list.html">
           Home
+          </a>
         </div>
         <div class="col-xs-3">
           <a class="pull-right" href="page-edit.html">
@@ -73,7 +79,9 @@
     <li class="list-group-item">
       <div class="row">
         <div class="col-xs-9">
+          <a href="../widget/widget-list.html">
           About
+          </a>
         </div>
         <div class="col-xs-3">
           <a class="pull-right" href="page-edit.html">
@@ -85,7 +93,9 @@
     <li class="list-group-item">
       <div class="row">
         <div class="col-xs-9">
+          <a href="../widget/widget-list.html">
           Contact Us
+          </a>
         </div>
         <div class="col-xs-3">
           <a class="pull-right" href="page-edit.html">
