--- a/src/assets/views/website/website-list.html
+++ b/src/assets/views/website/website-list.html
@@ -37,7 +37,9 @@
     <li class="list-group-item">
       <div class="row">
         <div class="col-xs-9">
-          Address Book App
+          <a href="../page/page-list.html">
+            Address Book App
+          </a>
         </div>
         <div class="col-xs-3">
           <a class="pull-right" href="website-edit.html">
@@ -49,7 +51,9 @@
     <li class="list-group-item">
       <div class="row">
         <div class="col-xs-9">
-          Blogger
+          <a href="../page/page-list.html">
+            Blogger
+          </a>
         </div>
         <div class="col-xs-3">
           <a class="pull-right" href="website-edit.html">
@@ -61,7 +65,9 @@
     <li class="list-group-item">
       <div class="row">
         <div class="col-xs-9">
-          Blogging App
+          <a href="../page/page-list.html">
+            Blogging App
+          </a>
         </div>
         <div class="col-xs-3">
           <a class="pull-right" href="website-edit.html">
@@ -73,7 +79,9 @@
     <li class="list-group-item">
       <div class="row">
         <div class="col-xs-9">
-          Script Testing App
+          <a href="../page/page-list.html">
+            Script Testing App
+          </a>
         </div>
         <div class="col-xs-3">
           <a class="pull-right" href="website-edit.html">
