--- a/src/assets/views/widget/widget-image.html
+++ b/src/assets/views/widget/widget-image.html
@@ -13,7 +13,7 @@
   <div class="container-fluid">
     <div class="col-sm-3 hidden-xs">
       <div class="navbar-brand pull-left">
-        <a href="../../views/user/profile.html" class="navbar-link">
+        <a href="widget-list.html" class="navbar-link">
           <span class="glyphicon glyphicon-chevron-left"></span>
         </a>
       </div>
@@ -27,7 +27,7 @@
     </div>
     <div class="col-sm-9">
       <div class="navbar-brand pull-left">
-        <a href="widget-chooser.html" class="navbar-link">
+        <a href="widget-list.html" class="navbar-link">
           <span class="glyphicon glyphicon-chevron-left"></span>
       </div>
       <div class="navbar-header pull-left">
@@ -39,7 +39,7 @@
       </div>
 
       <p class="navbar-brand pull-right">
-        <a href="widget-chooser.html" class="navbar-link">
+        <a href="widget-list.html" class="navbar-link">
           <span class="glyphicon glyphicon-ok"></span>
         </a>
       </p>
@@ -101,7 +101,7 @@
             name="URL"
             id="URL"
             class="form-control"
-            value="http://lorempixel.com/400/200/sports"/>
+            value="http://lorempixel.com/400/200/animals"/>
         </div>
       </form>
       <form>
@@ -130,10 +130,10 @@
             class="form-control"/>
         </div>
       </form>
-      <a class="btn btn-block btn-primary" role="button" aria-pressed="true" href="widget-chooser.html">
+      <a class="btn btn-block btn-primary" role="button" aria-pressed="true" href="widget-image.html">
         Upload Image
       </a>
-      <a class="btn btn-danger btn-block" role="button" aria-pressed="true" href="widget-chooser.html">
+      <a class="btn btn-danger btn-block" role="button" href="widget-list.html" aria-pressed="true">
         Delete
       </a>
     </div>
