--- a/src/assets/views/widget/widget-list.html
+++ b/src/assets/views/widget/widget-list.html
@@ -13,7 +13,7 @@
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-brand pull-left">
-      <a href="../../views/user/profile.html" class="navbar-link">
+      <a href="../page/page-list.html" class="navbar-link">
         <span class="glyphicon glyphicon-chevron-left"></span>
       </a>
     </div>
@@ -25,7 +25,7 @@
       </a>
     </div>
     <p class="navbar-text pull-right">
-      <a class="navbar-link" href="../../views/website/website-new.html">
+      <a class="navbar-link" href="widget-chooser.html">
         <span class="glyphicon glyphicon-plus"></span>
       </a>
     </p>
@@ -35,22 +35,28 @@
 <div class="container-fluid">
   <div class="jj-widget">
     <div class="jj-toolbar">
-      <span class="glyphicon glyphicon-cog"></span>
-      <span class="glyphicon glyphicon-menu-hamburger"></span>
+      <a href="widget-heading.html">
+        <span class="glyphicon glyphicon-cog"></span>
+        <span class="glyphicon glyphicon-menu-hamburger"></span>
+      </a>
     </div>
     <h1> GIZMODO</h1>
   </div>
   <div class="jj-widget">
     <div class="jj-toolbar">
-      <span class="glyphicon glyphicon-cog"></span>
-      <span class="glyphicon glyphicon-menu-hamburger"></span>
+      <a href="widget-heading.html">
+        <span class="glyphicon glyphicon-cog"></span>
+        <span class="glyphicon glyphicon-menu-hamburger"></span>
+      </a>
     </div>
     <h2> Animals </h2>
   </div>
   <div class="jj-widget">
     <div class="jj-toolbar">
-      <span class="glyphicon glyphicon-cog"></span>
-      <span class="glyphicon glyphicon-menu-hamburger"></span>
+      <a href="widget-image.html">
+        <span class="glyphicon glyphicon-cog"></span>
+        <span class="glyphicon glyphicon-menu-hamburger"></span>
+      </a>
     </div>
     <img class="jj-content" src="http://lorempixel.com/400/200/animals/"/>
   </div>
@@ -71,8 +77,10 @@
   </div>
   <div class="jj-widget">
     <div class="jj-toolbar">
-      <span class="glyphicon glyphicon-cog"></span>
-      <span class="glyphicon glyphicon-menu-hamburger"></span>
+      <a href="widget-youtube.html">
+        <span class="glyphicon glyphicon-cog"></span>
+        <span class="glyphicon glyphicon-menu-hamburger"></span>
+      </a>
     </div>
     <iframe class="jj-content"
             height=400px
