--- a/src/assets/views/website/website-edit.html
+++ b/src/assets/views/website/website-edit.html
@@ -32,6 +32,11 @@
       </p>
     </div>
     <div class="col-sm-9">
+      <div class="navbar-brand pull-left">
+        <a href="website-list.html" class="navbar-link">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
+      </div>
       <div class="navbar-header pull-left">
         <a class="navbar-brand thick">
           <b>
@@ -41,7 +46,7 @@
       </div>
 
       <p class="navbar-brand pull-right">
-        <a href="profile.html" class="navbar-link">
+        <a href="website-list.html" class="navbar-link">
           <span class="glyphicon glyphicon-ok"></span>
         </a>
       </p>
@@ -149,7 +154,7 @@
 <nav class="navbar navbar-default_blue navbar-fixed-bottom">
   <div class="container-fluid">
     <p class="navbar-brand pull-right">
-      <a href="profile.html">
+      <a href="../user/profile.html">
         <span class="glyphicon glyphicon-user"></span>
       </a>
     </p>
