--- a/src/assets/views/website/website-new.html
+++ b/src/assets/views/website/website-new.html
@@ -46,7 +46,7 @@
       </div>
 
       <p class="navbar-brand pull-right">
-        <a href="profile.html" class="navbar-link">
+        <a href="website-list.html" class="navbar-link">
           <span class="glyphicon glyphicon-ok"></span>
         </a>
       </p>
@@ -143,7 +143,7 @@
 <nav class="navbar navbar-default_blue navbar-fixed-bottom">
   <div class="container-fluid">
     <p class="navbar-brand pull-right">
-      <a href="profile.html">
+      <a href="../user/profile.html">
         <span class="glyphicon glyphicon-user"></span>
       </a>
     </p>
