--- a/src/assets/views/widget/widget-heading.html
+++ b/src/assets/views/widget/widget-heading.html
@@ -13,7 +13,7 @@
   <div class="container-fluid">
     <div class="col-sm-3 hidden-xs">
       <div class="navbar-brand pull-left">
-        <a href="../../views/user/profile.html" class="navbar-link">
+        <a href="widget-list.html" class="navbar-link">
           <span class="glyphicon glyphicon-chevron-left"></span>
         </a>
       </div>
@@ -29,6 +29,7 @@
       <div class="navbar-brand pull-left">
         <a href="widget-chooser.html" class="navbar-link">
           <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
       </div>
       <div class="navbar-header pull-left">
         <a class="navbar-brand thick">
@@ -39,7 +40,7 @@
       </div>
 
       <p class="navbar-brand pull-right">
-        <a href="widget-chooser.html" class="navbar-link">
+        <a href="widget-list.html" class="navbar-link">
           <span class="glyphicon glyphicon-ok"></span>
         </a>
       </p>
@@ -49,7 +50,6 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-sm-3 hidden-xs">
-      </nav>
       <nav class="jj-widget-chooser-padding">
         <ul><a href="../../views/widget/widget-heading.html"> Header </a></ul>
         <ul><a href="../../views/widget/widget-chooser.html"> Label </a></ul>
@@ -105,7 +105,7 @@
             value="3"/>
         </div>
       </form>
-      <a class="btn btn-danger btn-block" role="button" aria-pressed="true" href="widget-chooser.html">
+      <a class="btn btn-danger btn-block" role="button" aria-pressed="true" href="widget-list.html">
         Delete
       </a>
     </div>
