--- a/src/assets/views/page/page-edit.html
+++ b/src/assets/views/page/page-edit.html
@@ -14,7 +14,7 @@
   <div class="container-fluid">
     <div class="col-sm-3 hidden-xs">
       <div class="navbar-brand pull-left">
-        <a href="../../views/user/profile.html" class="navbar-link">
+        <a href="../website/website-list.html" class="navbar-link">
           <span class="glyphicon glyphicon-chevron-left"></span>
         </a>
       </div>
@@ -62,7 +62,9 @@
           <li class="list-group-item">
             <div class="row">
               <div class="col-xs-9">
-                Blog Post
+                <a href="../widget/widget-list.html">
+                  Blog Post
+                </a>
               </div>
               <div class="col-xs-3">
                 <a class="pull-right" href="page-edit.html">
@@ -74,7 +76,9 @@
           <li class="list-group-item">
             <div class="row">
               <div class="col-xs-9">
-                Blogs
+                <a href="../widget/widget-list.html">
+                  Blogs
+                </a>
               </div>
               <div class="col-xs-3">
                 <a class="pull-right" href="page-edit.html">
@@ -86,7 +90,9 @@
           <li class="list-group-item">
             <div class="row">
               <div class="col-xs-9">
-                Home
+                <a href="../widget/widget-list.html">
+                  Home
+                </a>
               </div>
               <div class="col-xs-3">
                 <a class="pull-right" href="page-edit.html">
@@ -98,7 +104,9 @@
           <li class="list-group-item">
             <div class="row">
               <div class="col-xs-9">
-                About
+                <a href="../widget/widget-list.html">
+                  About
+                </a>
               </div>
               <div class="col-xs-3">
                 <a class="pull-right" href="page-edit.html">
@@ -110,7 +118,9 @@
           <li class="list-group-item">
             <div class="row">
               <div class="col-xs-9">
-                Contact Us
+                <a href="../widget/widget-list.html">
+                  Contact Us
+                </a>
               </div>
               <div class="col-xs-3">
                 <a class="pull-right" href="page-edit.html">
