--- a/src/assets/views/website/website-edit.html
+++ b/src/assets/views/website/website-edit.html
@@ -14,7 +14,7 @@
   <div class="container-fluid">
     <div class="col-sm-3 hidden-xs">
       <div class="navbar-brand pull-left">
-        <a href="../../views/user/profile.html" class="navbar-link">
+        <a href="../website/website-list.html" class="navbar-link">
           <span class="glyphicon glyphicon-chevron-left"></span>
         </a>
       </div>
@@ -62,7 +62,9 @@
           <li class="list-group-item">
             <div class="row">
               <div class="col-xs-9">
-                Address Book App
+                <a href="../page/page-list.html">
+                  Address Book App
+                </a>
               </div>
               <div class="col-xs-3">
                 <a class="pull-right" href="website-edit.html">
@@ -74,7 +76,9 @@
           <li class="list-group-item">
             <div class="row">
               <div class="col-xs-9">
-                Blogger
+                <a href="../page/page-list.html">
+                  Blogger
+                </a>
               </div>
               <div class="col-xs-3">
                 <a class="pull-right" href="website-edit.html">
@@ -86,7 +90,9 @@
           <li class="list-group-item">
             <div class="row">
               <div class="col-xs-9">
-                Blogging App
+                <a href="../page/page-list.html">
+                  Blogging App
+                </a>
               </div>
               <div class="col-xs-3">
                 <a class="pull-right" href="website-edit.html">
@@ -98,7 +104,9 @@
           <li class="list-group-item">
             <div class="row">
               <div class="col-xs-9">
-                Script Testing App
+                <a href="../page/page-list.html">
+                  Script Testing App
+                </a>
               </div>
               <div class="col-xs-3">
                 <a class="pull-right" href="website-edit.html">
