--- a/src/assets/views/widget/widget-chooser.html
+++ b/src/assets/views/widget/widget-chooser.html
@@ -9,7 +9,7 @@
   <script src="../../vendors/bootstrap/dist/js/bootstrap.min.js"></script>
 </head>
 <body>
-<div class="container-fluid ">
+<div class="container-fluid jj-body">
   <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
       <div class="navbar-brand pull-left">
