--- a/src/assets/views/widget/widget-list.html
+++ b/src/assets/views/widget/widget-list.html
@@ -32,7 +32,7 @@
   </div>
 </nav>
 
-<div class="container-fluid">
+<div class="container-fluid jj-body">
   <div class="jj-widget">
     <div class="jj-toolbar">
       <a href="widget-heading.html">
