--- a/src/assets/views/page/page-new.html
+++ b/src/assets/views/page/page-new.html
@@ -53,7 +53,7 @@
   </div>
 </nav>
 
-<div class="container-fluid">
+<div class="container-fluid jj-body">
   <div class="row">
     <div class="col-sm-3 hidden-xs">
       <div class="container-fluid">
