--- a/src/assets/views/website/website-list.html
+++ b/src/assets/views/website/website-list.html
@@ -32,7 +32,7 @@
   </div>
 </nav>
 
-<div class="container-fluid">
+<div class="container-fluid jj-body">
   <ul class="list-group">
     <li class="list-group-item">
       <div class="row">
