--- a/src/assets/views/widget/widget-image.html
+++ b/src/assets/views/widget/widget-image.html
@@ -29,6 +29,7 @@
       <div class="navbar-brand pull-left">
         <a href="widget-list.html" class="navbar-link">
           <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
       </div>
       <div class="navbar-header pull-left">
         <a class="navbar-brand thick">
@@ -46,10 +47,9 @@
     </div>
   </div>
 </nav>
-<div class="container-fluid">
+<div class="container-fluid jj-body">
   <div class="row">
     <div class="col-sm-3 hidden-xs">
-      </nav>
       <nav class="jj-widget-chooser-padding">
         <ul><a href="../../views/widget/widget-heading.html"> Header </a></ul>
         <ul><a href="../../views/widget/widget-chooser.html"> Label </a></ul>
