--- a/src/assets/views/widget/widget-youtube.html
+++ b/src/assets/views/widget/widget-youtube.html
@@ -47,7 +47,7 @@
     </div>
   </div>
 </nav>
-<div class="container-fluid">
+<div class="container-fluid jj-body">
   <div class="row">
     <div class="col-sm-3 hidden-xs">
       <nav class="jj-widget-chooser-padding">
