refactored html pages

--- a/src/app/components/page/page-new/page-new.component.html
+++ b/src/app/components/page/page-new/page-new.component.html
@@ -1,3 +1,173 @@
-<p>
-  page-new works!
-</p>
+<!DOCTYPE html>
+
+
+charset="UTF-8"
+name="viewport" content="initial-scale=1, user-scalable=no"
+New Page
+rel="stylesheet" href="../../vendors/bootstrap/dist/css/bootstrap.min.css"
+rel="stylesheet" href="../../css/style.css"
+src="../../vendors/bootstrap/dist/js/bootstrap.min.js"
+
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="col-sm-3 hidden-xs">
+      <div class="navbar-brand pull-left">
+        <a href="../website/website-list.html" class="navbar-link">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
+      </div>
+      <div class="navbar-header pull-left">
+        <a class="navbar-brand">
+          <b>
+            Pages
+          </b>
+        </a>
+      </div>
+      <p class="navbar-brand pull-right">
+        <a class="navbar-link" href="page-new.html">
+          <span class="glyphicon glyphicon-plus"></span>
+        </a>
+      </p>
+    </div>
+    <div class="col-sm-9">
+      <div class="navbar-brand pull-left">
+        <a href="page-list.html" class="navbar-link">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
+      </div>
+      <div class="navbar-header pull-left">
+        <a class="navbar-brand thick">
+          <b>
+            New Page
+          </b>
+        </a>
+      </div>
+
+      <p class="navbar-brand pull-right">
+        <a href="page-list.html" class="navbar-link">
+          <span class="glyphicon glyphicon-ok"></span>
+        </a>
+      </p>
+    </div>
+  </div>
+</nav>
+
+<div class="container-fluid jj-body">
+  <div class="row">
+    <div class="col-sm-3 hidden-xs">
+      <div class="container-fluid">
+        <ul class="list-group">
+          <li class="list-group-item">
+            <div class="row">
+              <div class="col-xs-9">
+                <a href="../widget/widget-list.html">
+                  Blog Post
+                </a>
+              </div>
+              <div class="col-xs-3">
+                <a class="pull-right" href="page-edit.html">
+                  <span class="glyphicon glyphicon-cog"></span>
+                </a>
+              </div>
+            </div>
+          </li>
+          <li class="list-group-item">
+            <div class="row">
+              <div class="col-xs-9">
+                <a href="../widget/widget-list.html">
+                  Blogs
+                </a>
+              </div>
+              <div class="col-xs-3">
+                <a class="pull-right" href="page-edit.html">
+                  <span class="glyphicon glyphicon-cog"></span>
+                </a>
+              </div>
+            </div>
+          </li>
+          <li class="list-group-item">
+            <div class="row">
+              <div class="col-xs-9">
+                <a href="../widget/widget-list.html">
+                  Home
+                </a>
+              </div>
+              <div class="col-xs-3">
+                <a class="pull-right" href="page-edit.html">
+                  <span class="glyphicon glyphicon-cog"></span>
+                </a>
+              </div>
+            </div>
+          </li>
+          <li class="list-group-item">
+            <div class="row">
+              <div class="col-xs-9">
+                <a href="../widget/widget-list.html">
+                  About
+                </a>
+              </div>
+              <div class="col-xs-3">
+                <a class="pull-right" href="page-edit.html">
+                  <span class="glyphicon glyphicon-cog"></span>
+                </a>
+              </div>
+            </div>
+          </li>
+          <li class="list-group-item">
+            <div class="row">
+              <div class="col-xs-9">
+                <a href="../widget/widget-list.html">
+                  Contact Us
+                </a>
+              </div>
+              <div class="col-xs-3">
+                <a class="pull-right" href="page-edit.html">
+                  <span class="glyphicon glyphicon-cog"></span>
+                </a>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+
+    </div>
+    <div class="col-sm-9">
+
+      <form>
+        <div class="form-group">
+          <label for="Name">
+            Name
+          </label>
+          <input name="Name"
+                 id="Name"
+                 type="text"
+                 placeholder="Page Name"
+                 class="form-control"/>
+        </div>
+      </form>
+      <form>
+        <div class="form-group">
+          <label for="Title">
+            Title
+          </label>
+          <input
+            placeholder="Title"
+            name="Title"
+            id="Title"
+            class="form-control"/>
+        </div>
+      </form>
+    </div>
+
+
+    <nav class="navbar navbar-default navbar-fixed-bottom">
+      <div class="container-fluid">
+        <p class="navbar-brand pull-right">
+          <a href="../../views/user/profile.html">
+            <span class="glyphicon glyphicon-user"></span>
+          </a>
+        </p>
+      </div>
+    </nav>
+  </div>
+</div>
