--- a/src/assets/views/page/page-list.html
+++ b/src/assets/views/page/page-list.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="initial-scale=1, user-scalable=no">
-  <title>Pages</title>
-  <link rel="stylesheet" href="../../vendors/bootstrap/dist/css/bootstrap.min.css"/>
-  <link rel="stylesheet" href="../../css/style.css"/>
-  <script src="../../vendors/bootstrap/dist/js/bootstrap.min.js"></script>
-</head>
-<body>
+
+
+  charset="UTF-8"
+  name="viewport" content="initial-scale=1, user-scalable=no"
+  Pages
+  rel="stylesheet" href="../../vendors/bootstrap/dist/css/bootstrap.min.css"
+  rel="stylesheet" href="../../css/style.css"/>
+  src="../../vendors/bootstrap/dist/js/bootstrap.min.js"
+
 
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
@@ -116,6 +115,3 @@
     </p>
   </div>
 </nav>
-
-</body>
-</html>
