--- a/src/assets/views/page/page-new.html
+++ b/src/assets/views/page/page-new.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="initial-scale=1, user-scalable=no">
-  <title>New Page</title>
-  <link rel="stylesheet" href="../../vendors/bootstrap/dist/css/bootstrap.min.css"/>
-  <link rel="stylesheet" href="../../css/style.css"/>
-  <script src="../../vendors/bootstrap/dist/js/bootstrap.min.js"></script>
-</head>
-<body>
+
+
+charset="UTF-8"
+name="viewport" content="initial-scale=1, user-scalable=no"
+New Page
+rel="stylesheet" href="../../vendors/bootstrap/dist/css/bootstrap.min.css"
+rel="stylesheet" href="../../css/style.css"
+src="../../vendors/bootstrap/dist/js/bootstrap.min.js"
 
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
@@ -35,6 +33,7 @@
       <div class="navbar-brand pull-left">
         <a href="page-list.html" class="navbar-link">
           <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
       </div>
       <div class="navbar-header pull-left">
         <a class="navbar-brand thick">
@@ -172,5 +171,3 @@
     </nav>
   </div>
 </div>
-</body>
-</html>
