--- a/src/assets/views/user/login.html
+++ b/src/assets/views/user/login.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="initial-scale=1, user-scalable=no">
-  <title>Login</title>
-  <link rel="stylesheet" href="../../vendors/bootstrap/dist/css/bootstrap.min.css"/>
-  <link rel="stylesheet" href="../../css/style.css"/>
-  <script src="../../vendors/bootstrap/dist/js/bootstrap.min.js"></script>
-</head>
-<body>
 
+
+   charset="UTF-8"
+   name="viewport" content="initial-scale=1, user-scalable=no"
+   Login
+   rel="stylesheet" href="../../vendors/bootstrap/dist/css/bootstrap.min.css"
+   rel="stylesheet" href="../../css/style.css"/>
+   src="../../vendors/bootstrap/dist/js/bootstrap.min.js"
 
 <div class="container-fluid">
   <h1>Login</h1>
@@ -36,6 +33,3 @@
     Cancel
   </a>
 </div>
-
-</body>
-</html>
