--- a/src/assets/views/website/website-new.html
+++ b/src/assets/views/website/website-new.html
@@ -1,14 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="initial-scale=1, user-scalable=no">
-  <title>New Website</title>
-  <link rel="stylesheet" href="../../vendors/bootstrap/dist/css/bootstrap.min.css"/>
-  <link rel="stylesheet" href="../../css/style.css"/>
-  <script src="../../vendors/bootstrap/dist/js/bootstrap.min.js"></script>
-</head>
-<body>
+  charset="UTF-8"
+  name="viewport" content="initial-scale=1, user-scalable=no"
+  New Website
+  rel="stylesheet" href="../../vendors/bootstrap/dist/css/bootstrap.min.css"
+  rel="stylesheet" href="../../css/style.css"
+  src="../../vendors/bootstrap/dist/js/bootstrap.min.js"
+
 
 <nav class="navbar navbar-default_blue navbar-fixed-top">
   <div class="container-fluid">
@@ -158,5 +154,3 @@
   </div>
 </nav>
 
-</body>
-</html>
