--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -18,5 +18,8 @@
   <h4>
     <a href="../../../assets/index.html">Assignment 2</a>
   </h4>
+  <h4>
+    <a href="../../components/page/page-edit/page-edit.component.html">check</a>
+  </h4>
 </div>
 
