--- a/src/app/components/user/register/register.component.html
+++ b/src/app/components/user/register/register.component.html
@@ -1,3 +1,38 @@
-<p>
-  register works!
-</p>
+
+charset="UTF-8">
+name="viewport" content="initial-scale=1, user-scalable=no"
+Register
+rel="stylesheet" href="../../vendors/bootstrap/dist/css/bootstrap.min.css"
+rel="stylesheet" href="../../css/style.css"
+src="../../vendors/bootstrap/dist/js/bootstrap.min.js"
+
+<div class="container-fluid">
+  <h1>Register</h1>
+
+  <input name="username"
+         id="username"
+         type="text"
+         placeholder="username"
+         class="form-control"/>
+
+  <input name="password"
+         id="password"
+         type="password"
+         placeholder="password"
+         class="form-control"/>
+
+  <input name="verify password"
+         id="verify password"
+         type="password"
+         placeholder="verify password"
+         class="form-control">
+
+  <a class="btn btn-primary btn-block" role="button" aria-pressed="true" href="profile.html">
+    Register
+  </a>
+
+  <a class="btn btn-danger btn-block" role="button" aria-pressed="true" href="login.html">
+    Cancel
+  </a>
+</div>
+
