--- a/src/app/components/website/website-new/website-new.component.html
+++ b/src/app/components/website/website-new/website-new.component.html
@@ -1,3 +1,156 @@
-<p>
-  website-new works!
-</p>
+charset="UTF-8"
+name="viewport" content="initial-scale=1, user-scalable=no"
+New Website
+rel="stylesheet" href="../../vendors/bootstrap/dist/css/bootstrap.min.css"
+rel="stylesheet" href="../../css/style.css"
+src="../../vendors/bootstrap/dist/js/bootstrap.min.js"
+
+
+<nav class="navbar navbar-default_blue navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="col-sm-3 hidden-xs">
+      <div class="navbar-brand pull-left">
+        <a href="../../views/user/profile.html" class="navbar-link">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
+      </div>
+      <div class="navbar-header pull-left">
+        <a class="navbar-brand">
+          <b>
+            Websites
+          </b>
+        </a>
+      </div>
+      <p class="navbar-brand pull-right">
+        <a class="navbar-link" href="website-new.html">
+          <span class="glyphicon glyphicon-plus"></span>
+        </a>
+      </p>
+    </div>
+    <div class="col-sm-9">
+      <div class="navbar-brand pull-left">
+        <a href="website-list.html" class="navbar-link">
+          <span class="glyphicon glyphicon-remove"></span>
+        </a>
+      </div>
+      <div class="navbar-header pull-left">
+        <a class="navbar-brand thick">
+          <b>
+            New Website
+          </b>
+        </a>
+      </div>
+
+      <p class="navbar-brand pull-right">
+        <a href="website-list.html" class="navbar-link">
+          <span class="glyphicon glyphicon-ok"></span>
+        </a>
+      </p>
+    </div>
+  </div>
+</nav>
+
+<div class="container-fluid jj-body">
+  <div class="row">
+    <div class="col-sm-3 hidden-xs">
+      <div class="container-fluid">
+        <ul class="list-group">
+          <li class="list-group-item">
+            <div class="row">
+              <div class="col-xs-9">
+                <a href="../page/page-list.html">
+                  Address Book App
+                </a>
+              </div>
+              <div class="col-xs-3">
+                <a class="pull-right" href="website-edit.html">
+                  <span class="glyphicon glyphicon-cog"></span>
+                </a>
+              </div>
+            </div>
+          </li>
+          <li class="list-group-item">
+            <div class="row">
+              <div class="col-xs-9">
+                <a href="../page/page-list.html">
+                  Blogger
+                </a>
+              </div>
+              <div class="col-xs-3">
+                <a class="pull-right" href="website-edit.html">
+                  <span class="glyphicon glyphicon-cog"></span>
+                </a>
+              </div>
+            </div>
+          </li>
+          <li class="list-group-item">
+            <div class="row">
+              <div class="col-xs-9">
+                <a href="../page/page-list.html">
+                  Blogging App
+                </a>
+              </div>
+              <div class="col-xs-3">
+                <a class="pull-right" href="website-edit.html">
+                  <span class="glyphicon glyphicon-cog"></span>
+                </a>
+              </div>
+            </div>
+          </li>
+          <li class="list-group-item">
+            <div class="row">
+              <div class="col-xs-9">
+                <a href="../page/page-list.html">
+                  Script Testing App
+                </a>
+              </div>
+              <div class="col-xs-3">
+                <a class="pull-right" href="website-edit.html">
+                  <span class="glyphicon glyphicon-cog"></span>
+                </a>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="col-sm-9">
+      <form>
+        <div class="form-group">
+          <label for="Name">
+            Name
+          </label>
+          <input name="Name"
+                 id="Name"
+                 type="text"
+                 placeholder="Name"
+                 class="form-control"/>
+        </div>
+
+      </form>
+      <div class="form-group">
+        <label for="Description">
+          Description
+        </label>
+        <textarea
+          placeholder="Description"
+          rows="5"
+          name="Description"
+          id="Description"
+          class="form-control"></textarea>
+      </div>
+    </div>
+  </div>
+</div>
+
+<nav class="navbar navbar-default_blue navbar-fixed-bottom">
+  <div class="container-fluid">
+    <p class="navbar-brand pull-right">
+      <a href="../user/profile.html">
+        <span class="glyphicon glyphicon-user"></span>
+      </a>
+    </p>
+  </div>
+</nav>
+
