--- a/src/app/components/widget/widget-image/widget-image.component.html
+++ b/src/app/components/widget/widget-image/widget-image.component.html
@@ -1,3 +1,148 @@
-<p>
-  widget-image works!
-</p>
+
+charset="UTF-8"
+name="viewport" content="initial-scale=1, user-scalable=no"
+Widget Edit
+rel="stylesheet" href="../../vendors/bootstrap/dist/css/bootstrap.min.css"
+rel="stylesheet" href="../../css/style.css"
+src="../../vendors/bootstrap/dist/js/bootstrap.min.js"
+
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="col-sm-3 hidden-xs">
+      <div class="navbar-brand pull-left">
+        <a href="widget-list.html" class="navbar-link">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
+      </div>
+      <div class="navbar-header pull-left">
+        <a class="navbar-brand">
+          <b>
+            Choose Widget
+          </b>
+        </a>
+      </div>
+    </div>
+    <div class="col-sm-9">
+      <div class="navbar-brand pull-left">
+        <a href="widget-list.html" class="navbar-link">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
+      </div>
+      <div class="navbar-header pull-left">
+        <a class="navbar-brand thick">
+          <b>
+            Widget Edit
+          </b>
+        </a>
+      </div>
+
+      <p class="navbar-brand pull-right">
+        <a href="widget-list.html" class="navbar-link">
+          <span class="glyphicon glyphicon-ok"></span>
+        </a>
+      </p>
+    </div>
+  </div>
+</nav>
+<div class="container-fluid jj-body">
+  <div class="row">
+    <div class="col-sm-3 hidden-xs">
+      <nav class="jj-widget-chooser-padding">
+        <ul><a href="../../views/widget/widget-heading.html"> Header </a></ul>
+        <ul><a href="../../views/widget/widget-chooser.html"> Label </a></ul>
+        <ul><a href="../../views/widget/widget-chooser.html"> HTML </a></ul>
+        <ul><a href="../../views/widget/widget-chooser.html"> Text Input </a></ul>
+        <ul><a href="../../views/widget/widget-chooser.html"> Link </a></ul>
+        <ul><a href="../../views/widget/widget-chooser.html"> Button </a></ul>
+        <ul><a href="../../views/widget/widget-image.html"> Image </a></ul>
+        <ul><a href="../../views/widget/widget-youtube.html"> YouTube </a></ul>
+        <ul><a href="../../views/widget/widget-chooser.html"> Data Table </a></ul>
+        <ul><a href="../../views/widget/widget-chooser.html"> Repeater </a></ul>
+
+      </nav>
+    </div>
+    <div class="col-sm-9">
+
+      <form>
+        <div class="form-group">
+          <label for="Name">
+            Name
+          </label>
+          <input name="Name"
+                 id="Name"
+                 type="text"
+                 class="form-control"/>
+        </div>
+      </form>
+      <form>
+        <div class="form-group">
+          <label for="Text">
+            Text
+          </label>
+          <input
+            type="text"
+            placeholder="Animals"
+            name="Text"
+            id="Text"
+            class="form-control"/>
+        </div>
+      </form>
+      <form>
+        <div class="form-group">
+          <label for="URL">
+            URL
+          </label>
+          <input
+            type="url"
+            placeholder="URL"
+            name="URL"
+            id="URL"
+            class="form-control"
+            value="http://lorempixel.com/400/200/animals"/>
+        </div>
+      </form>
+      <form>
+        <div class="form-group">
+          <label for="Width">
+            Width
+          </label>
+          <input
+            name="Width"
+            id="Width"
+            class="form-control"
+            type="text"
+            value="100%"/>
+        </div>
+      </form>
+      <form>
+        <div class="form-group">
+          <label for="Upload">
+            Upload
+          </label>
+          <input
+            type="file"
+            placeholder="Upload"
+            name="Upload"
+            id="Upload"
+            class="form-control"/>
+        </div>
+      </form>
+      <a class="btn btn-block btn-primary" role="button" aria-pressed="true" href="widget-image.html">
+        Upload Image
+      </a>
+      <a class="btn btn-danger btn-block" role="button" href="widget-list.html" aria-pressed="true">
+        Delete
+      </a>
+    </div>
+  </div>
+</div>
+<nav class="navbar navbar-default navbar-fixed-bottom">
+  <div class="container-fluid">
+    <p class="navbar-text pull-right">
+      <a href="../../views/user/profile.html">
+        <span class="glyphicon glyphicon-user"></span>
+      </a>
+    </p>
+  </div>
+</nav>
+
