--- a/src/assets/views/user/register.html
+++ b/src/assets/views/user/register.html
@@ -1,14 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="initial-scale=1, user-scalable=no">
-  <title>Register</title>
-  <link rel="stylesheet" href="../../vendors/bootstrap/dist/css/bootstrap.min.css"/>
-  <link rel="stylesheet" href="../../css/style.css"/>
-  <script src="../../vendors/bootstrap/dist/js/bootstrap.min.js"></script>
-</head>
-<body>
+
+  charset="UTF-8">
+  name="viewport" content="initial-scale=1, user-scalable=no"
+  Register
+  rel="stylesheet" href="../../vendors/bootstrap/dist/css/bootstrap.min.css"
+  rel="stylesheet" href="../../css/style.css"
+  src="../../vendors/bootstrap/dist/js/bootstrap.min.js"
 
 <div class="container-fluid">
   <h1>Register</h1>
@@ -40,5 +36,3 @@
   </a>
 </div>
 
-</body>
-</html>
