--- a/src/assets/views/website/website-list.html
+++ b/src/assets/views/website/website-list.html
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="initial-scale=1, user-scalable=no">
-  <title>Websites</title>
-  <link rel="stylesheet" href="../../vendors/bootstrap/dist/css/bootstrap.min.css"/>
-  <link rel="stylesheet" href="../../css/style.css"/>
-  <script src="../../vendors/bootstrap/dist/js/bootstrap.min.js"></script>
-</head>
-<body>
+  charset="UTF-8"
+  name="viewport" content="initial-scale=1, user-scalable=no"
+  Websites
+  rel="stylesheet" href="../../vendors/bootstrap/dist/css/bootstrap.min.css"
+  rel="stylesheet" href="../../css/style.css"
+  src="../../vendors/bootstrap/dist/js/bootstrap.min.js"
 
 <nav class="navbar navbar-default_blue navbar-fixed-top">
   <div class="container-fluid">
@@ -102,6 +97,3 @@
     </p>
   </div>
 </nav>
-
-</body>
-</html>
