--- a/src/assets/views/widget/widget-chooser.html
+++ b/src/assets/views/widget/widget-chooser.html
@@ -1,14 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="initial-scale=1, user-scalable=no">
-  <title>Choose Widget</title>
-  <link rel="stylesheet" href="../../vendors/bootstrap/dist/css/bootstrap.min.css"/>
-  <link rel="stylesheet" href="../../css/style.css"/>
-  <script src="../../vendors/bootstrap/dist/js/bootstrap.min.js"></script>
-</head>
-<body>
+  charset="UTF-8"
+  name="viewport" content="initial-scale=1, user-scalable=no"
+  Choose Widget
+  rel="stylesheet" href="../../vendors/bootstrap/dist/css/bootstrap.min.css"
+  rel="stylesheet" href="../../css/style.css"
+  src="../../vendors/bootstrap/dist/js/bootstrap.min.js"
+
 <div class="container-fluid jj-body">
   <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
@@ -49,5 +45,4 @@
       </div>
     </nav>
 </div>
-</body>
-</html>
+
