--- a/src/assets/views/widget/widget-image.html
+++ b/src/assets/views/widget/widget-image.html
@@ -1,14 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="initial-scale=1, user-scalable=no">
-  <title>Widget Edit</title>
-  <link rel="stylesheet" href="../../vendors/bootstrap/dist/css/bootstrap.min.css"/>
-  <link rel="stylesheet" href="../../css/style.css"/>
-  <script src="../../vendors/bootstrap/dist/js/bootstrap.min.js"></script>
-</head>
-<body>
+
+  charset="UTF-8"
+  name="viewport" content="initial-scale=1, user-scalable=no"
+  Widget Edit
+  rel="stylesheet" href="../../vendors/bootstrap/dist/css/bootstrap.min.css"
+  rel="stylesheet" href="../../css/style.css"
+  src="../../vendors/bootstrap/dist/js/bootstrap.min.js"
+
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <div class="col-sm-3 hidden-xs">
@@ -148,5 +145,4 @@
     </p>
   </div>
 </nav>
-</body>
-</html>
+
