changes to widget

--- a/src/app/components/widget/widget-edit/widget-header/widget-header.component.html
+++ b/src/app/components/widget/widget-edit/widget-header/widget-header.component.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 
 charset="UTF-8"
 name="viewport" content="initial-scale=1, user-scalable=no"
@@ -24,7 +25,7 @@ src="../../vendors/bootstrap/dist/js/bootstrap.min.js"
     </div>
     <div class="col-sm-9">
       <div class="navbar-brand pull-left">
-        <a href="widget-list.html" class="navbar-link">
+        <a href="widget-chooser.html" class="navbar-link">
           <span class="glyphicon glyphicon-chevron-left"></span>
         </a>
       </div>
@@ -80,57 +81,29 @@ src="../../vendors/bootstrap/dist/js/bootstrap.min.js"
             Text
           </label>
           <input
-            type="text"
             placeholder="Animals"
             name="Text"
             id="Text"
-            class="form-control"/>
-        </div>
-      </form>
-      <form>
-        <div class="form-group">
-          <label for="URL">
-            URL
-          </label>
-          <input
-            type="url"
-            placeholder="URL"
-            name="URL"
-            id="URL"
-            class="form-control"
-            value="http://lorempixel.com/400/200/animals"/>
-        </div>
-      </form>
-      <form>
-        <div class="form-group">
-          <label for="Width">
-            Width
-          </label>
-          <input
-            name="Width"
-            id="Width"
             class="form-control"
             type="text"
-            value="100%"/>
+            value="Animals"/>
         </div>
       </form>
       <form>
         <div class="form-group">
-          <label for="Upload">
-            Upload
+          <label for="Size">
+            Size
           </label>
           <input
-            type="file"
-            placeholder="Upload"
-            name="Upload"
-            id="Upload"
-            class="form-control"/>
+            placeholder="Animals"
+            name="Size"
+            id="Size"
+            class="form-control"
+            type="number"
+            value="3"/>
         </div>
       </form>
-      <a class="btn btn-block btn-primary" role="button" aria-pressed="true" href="widget-image.html">
-        Upload Image
-      </a>
-      <a class="btn btn-danger btn-block" role="button" href="widget-list.html" aria-pressed="true">
+      <a class="btn btn-danger btn-block" role="button" aria-pressed="true" href="widget-list.html">
         Delete
       </a>
     </div>
@@ -144,5 +117,4 @@ src="../../vendors/bootstrap/dist/js/bootstrap.min.js"
       </a>
     </p>
   </div>
-</nav>
 
